--- a/Delningsekonomi/Delningsekonomi/Views/Shared/Bottommenu.cshtml
+++ b/Delningsekonomi/Delningsekonomi/Views/Shared/Bottommenu.cshtml
@@ -1,1 +1,108 @@
-﻿
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <style>
+        .icon {
+            background: white;
+        }
+
+        .bottom-menu {
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+            height: 0;
+            position: fixed;
+            z-index: 1;
+            bottom: 0;
+            left: 0;
+            background-color: #111;
+            overflow-y: hidden;
+            transition: 4.5s;
+            padding-top: 60px;
+        }
+
+            .bottom-menu a {
+                padding: 8px 8px 8px 32px;
+                text-decoration: none;
+                font-size: 25px;
+                color: #818181;
+                display: block;
+                transition: 0.3s;
+            }
+
+                .bottom-menu a:hover {
+                    color: #f1f1f1;
+                }
+
+            .bottom-menu .closebtn {
+                position: absolute;
+                top: 0;
+                right: 25px;
+                font-size: 36px;
+                margin-left: 50px;
+            }
+        body {
+            margin: 0;
+        }
+
+        .collapsible {
+            background-color: #eee;
+            color: #444;
+            cursor: pointer;
+            border: none;
+            text-align: left;
+            outline: none;
+            font-size: 15px;
+            transition: 0.4s;
+        }
+
+        .icon-bar {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            background-color: #555;
+            overflow: auto;
+        }
+
+            .icon-bar a {
+                float: left;
+                width: 33%;
+                text-align: center;
+                padding: 12px 0;
+                transition: all 0.3s ease;
+                color: white;
+            }
+
+                .icon-bar a:hover {
+                    background-color: #000;
+                }
+    </style>
+</head>
+<body>
+    
+    <div class="icon-bar  collapsible">
+        <div class="bottom-menu" id="bottom-menu">
+            <a href="javascript:void(0)" class="closebtn" onclick="openNav()">
+                <i class="fa fa-home">
+
+                </i>
+            </a>
+        </div>
+        <a href="#"><i class="fa fa-search"></i></a>
+        <a href="#"><i class="fa fa-envelope"></i></a>
+
+    </div>
+    <script>
+        function openNav() {
+            document.getElementById("bottom-menu").style.height = "400px";
+        }
+
+        function closeNav() {
+            document.getElementById("bottom-menu").style.height = "0";
+        }
+    </script>
+</body>
+</html>
