--- a/Delningsekonomi/Delningsekonomi/Views/Shared/Bottommenu.cshtml
+++ b/Delningsekonomi/Delningsekonomi/Views/Shared/Bottommenu.cshtml
@@ -82,10 +82,10 @@
     </style>
 </head>
 <body>
-    
+    <div 
     <div class="icon-bar  collapsible">
         <div class="bottom-menu" id="bottom-menu">
-            <a href="javascript:void(0)" class="closebtn" onclick="openNav()">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">
                 <i class="fa fa-home">
 
                 </i>
