--- a/Delningsekonomi/Delningsekonomi/Views/Shared/Topmenu.cshtml
+++ b/Delningsekonomi/Delningsekonomi/Views/Shared/Topmenu.cshtml
@@ -122,7 +122,7 @@
 
 
     <div id="menu">
-            <span id="hamburger" onclick="openNav()">&#9776;</span>
+            <div id="hamburger" onclick="openNav()">&#9776;</div>
             <input id="pac-input" class="controls" type="text" placeholder="Search Box">
     </div>
     <script>
