--- a/Delningsekonomi/Delningsekonomi/Views/Home/Index.cshtml
+++ b/Delningsekonomi/Delningsekonomi/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     ViewBag.Title = "Home Page";
 }
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/MapLayout.cshtml";
 }
 @Html.Partial("Topmenu")
 <div id="map" class="map"></div>
