--- a/Delningsekonomi/Delningsekonomi/Views/Shared/Topmenu.cshtml
+++ b/Delningsekonomi/Delningsekonomi/Views/Shared/Topmenu.cshtml
@@ -125,7 +125,7 @@
 <body>
     <div id="mySidenav" class="sidenav">
         <div id="toplogin">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a href="javascript:void(0)" class="closebtn" onclick="closeBurger()">&times;</a>
             <p> Namn på den inloggade</p>
             <p> Email på den inloggade</p>
         </div>
@@ -139,7 +139,7 @@
 
 
     <div id="menu">
-            <div id="hamburger" onclick="openNav()">&#9776;</div>
+            <div id="hamburger" onclick="openBurger()">&#9776;</div>
             <input id="pac-input" class="controls" type="text" placeholder="Search Box">
         </div>
     </div>
