--- a/Delningsekonomi/Delningsekonomi/Views/Shared/Topmenu.cshtml
+++ b/Delningsekonomi/Delningsekonomi/Views/Shared/Topmenu.cshtml
@@ -139,9 +139,9 @@
 
 
     <div id="menu">
-            <div id="hamburger" onclick="openBurger()">&#9776;</div>
+            <span id="hamburger" onclick="openBurger()">&#9776;</span>
             <input id="pac-input" class="controls" type="text" placeholder="Search Box">
         </div>
-    </div>
+    
 </body>
 </html>
