--- a/Delningsekonomi/Delningsekonomi/Views/Home/Index.cshtml
+++ b/Delningsekonomi/Delningsekonomi/Views/Home/Index.cshtml
@@ -20,6 +20,7 @@
     var myAPIpoints = @Html.Raw(Model);
     var startLat = @ViewBag.Lat;
     var startLng = @ViewBag.Lng;
+    var startRadius = @ViewBag.Radius;
 </script>
 <script src="~/Scripts/MapApp.js"></script>
 <script async defer
