--- a/Delningsekonomi/Delningsekonomi/Views/Shared/_Layout.cshtml
+++ b/Delningsekonomi/Delningsekonomi/Views/Shared/_Layout.cshtml
@@ -10,8 +10,7 @@
         #map {
             height: calc(100vh - 100px);
             width: 100vw;
-            position:fixed;
-
+            position: static;
         }
 
         .body-content {
