--- a/Delningsekonomi/Delningsekonomi/Views/Home/ListView.cshtml
+++ b/Delningsekonomi/Delningsekonomi/Views/Home/ListView.cshtml
@@ -27,9 +27,8 @@
 
     </div>
 }
-
+<div id="map" class="map"></div>
 <script>
-    var myAPIpoints = @Html.Raw(Model);
     var startLat = @ViewBag.Lat;
     var startLng = @ViewBag.Lng;
 </script>
