--- a/Delningsekonomi/Delningsekonomi/Views/Home/ListView.cshtml
+++ b/Delningsekonomi/Delningsekonomi/Views/Home/ListView.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "ListView";
 }
 @{
-    Layout = "~/Views/Shared/MapLayout.cshtml";
+    Layout = "~/Views/Shared/listLayout.cshtml";
 }
 @Html.Partial("Topmenu")
 
@@ -33,19 +33,29 @@
     <input type="hidden" id="cityLng" name="cityLng" />
 }
 <script>var counter = 0;</script>
-@foreach (var item in Model)
-{
-    <div id="list" class="list">
-        @Html.DisplayFor(itemModel => item.Title)
-        @Html.DisplayFor(itemModel => item.Description)
+<div id="list_content" class="list_content">
+    @foreach (var item in Model)
+    {
+        <div id="list" class="list">
+            <div class="list_title">
+                @Html.DisplayFor(itemModel => item.Title)
+            </div>
+            <div class="list_distance">
+                <div id="distext"></div>
+            </div>
+            <br />
+            <div class="list_desc">
+                @Html.DisplayFor(itemModel => item.Description)
+            </div>
+            <div class="list_img">
+                <img src="@Html.DisplayFor(itemModel => item.Image)" />
+            </div>
+            <div class="list_tags">
+                @Html.DisplayFor(itemModel => item.Tags)
+            </div>
+            
 
-        <img src="@Html.DisplayFor(itemModel => item.Image)" />
-        @Html.DisplayFor(itemModel => item.Tags)
-        @Html.DisplayFor(itemModel => item.Location)
-
-        <div id="distext">Distance: </div>
-
-        <script>
+            <script>
             var currentpos = {
                 lat: @ViewBag.Lat,
                 lng: @ViewBag.Lng
@@ -57,14 +67,21 @@
             };
 
             document.getElementById("distext").id = "distext" + counter;
-            var textbox = document.getElementById("distext" + counter);
-            textbox.innerHTML += getDistance(startpos, currentpos);
-            counter++;
+                var textbox = document.getElementById("distext" + counter);
+                var value = Math.round(getDistance(startpos, currentpos));
+                if (value > 1000) {
+                    textbox.innerHTML += value/1000 + "km";
+                } else {
+                    textbox.innerHTML += value + "m";
+                }
             
-        </script>
+            counter++;
 
-    </div>
-}
+            </script>
+
+        </div>
+    }
+</div>
 
 <div id="map" class="map"></div>
 
