--- a/Delningsekonomi/Delningsekonomi/Views/Shared/Topmenu.cshtml
+++ b/Delningsekonomi/Delningsekonomi/Views/Shared/Topmenu.cshtml
@@ -1,10 +1,15 @@
 ﻿<div id="mySidenav" class="sidenav">
     <div id="toplogin">
         <a href="javascript:void(0)" class="closebtn" onclick="closeBurger()">&times;</a>
-        <p> Namn på den inloggade</p>
-        <p> Email på den inloggade</p>
+        <div id="avatardiv">
+            <img src="~/Images/avatar.png" alt="Avatar" class="avatar">
+        </div>
+        <p id="nameuser"> Anders Jakobsson</p>
+        <p id="email"> a.jakobsson@gmail.com</p>
     </div>
-    <a href="#">Log Out</a>
+    <div id="loggaut">
+        <a href="#">Log Out</a>
+    </div>
     <a href="#">Offers & Requests</a>
     <a href="#">Settings</a>
     <a href="#">Help</a>
