--- a/Delningsekonomi/Delningsekonomi/Views/Shared/ListLayout.cshtml
+++ b/Delningsekonomi/Delningsekonomi/Views/Shared/ListLayout.cshtml
@@ -35,50 +35,76 @@
             margin-top: 2px;
             height: 30px;
         }
-
-        #pac-input:focus {
-        }
-
-
         .sidenav {
             height: 100%;
-            width: 0;
+            width: 70%;
             position: fixed;
-            z-index: 1;
+            z-index: 2;
             top: 0;
             left: 0;
             background-color: #111;
             overflow-x: hidden;
             transition: 0.5s;
-            padding-top: 60px;
         }
 
-        .sidenav a {
-            padding: 8px 8px 8px 32px;
-            text-decoration: none;
-            font-size: 25px;
-            color: #818181;
-            display: block;
-            transition: 0.3s;
-        }
+            .sidenav a {
+                padding: 8px 8px 8px 8px;
+                text-decoration: none;
+                font-size: 25px;
+                color: #818181;
+                display: block;
+                transition: 0.3s;
+            }
 
-        .sidenav a:hover {
-            color: #f1f1f1;
-        }
+                .sidenav a:hover {
+                    color: #f1f1f1;
+                }
 
-        .sidenav .closebtn {
-            position: absolute;
-            top: 0;
-            right: 25px;
-            font-size: 36px;
-            margin-left: 50px;
-        }
+            .sidenav .closebtn {
+                position: absolute;
+                top: 0;
+                font-size: 36px;
+            }
 
         #toplogin {
             top: 0;
-            height: 250px;
+            height: 200px;
             width: 100%;
+            position: relative;
             background-color: aqua;
+        }
+
+        #loggaut {
+            background-color: aquamarine;
+        }
+
+        #email {
+            bottom: 0;
+            font-size: 5vw;
+            margin: 5px;
+            position: absolute;
+        }
+
+        #nameuser {
+            bottom: 10px;
+            font-size: 5vw;
+            margin-left: 5px;
+            position: absolute;
+        }
+
+        #avatardiv {
+            position: absolute;
+            right: 0;
+            height: 100px;
+            width: 100px;
+            margin: 5%;
+        }
+
+        .avatar {
+            vertical-align: middle;
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
         }
 
         #menu {
@@ -92,7 +118,7 @@
             padding: 0;
             left: 0;
             display: inline-block;
-            z-index: 100;
+            z-index: 1;
         }
 
         #left {
