--- a/Delningsekonomi/Delningsekonomi/Views/Shared/Topmenu.cshtml
+++ b/Delningsekonomi/Delningsekonomi/Views/Shared/Topmenu.cshtml
@@ -1,4 +1,11 @@
-﻿<div id="mySidenav" class="sidenav">
+﻿
+
+
+<head>
+    <link rel="stylesheet" type="text/css" href="~/Content/sidemenu.css" />
+</head>
+
+<div id="mySidenav" class="sidenav">
     <div id="toplogin">
         <a href="javascript:void(0)" class="closebtn" onclick="closeBurger()">&times;</a>
         <div id="avatardiv">
