As-go' css på ALLT

--- a/Delningsekonomi/Delningsekonomi/Views/Shared/MapLayout.cshtml
+++ b/Delningsekonomi/Delningsekonomi/Views/Shared/MapLayout.cshtml
@@ -27,8 +27,8 @@
 
        
         #map {
-            margin-top: 62px;
-            height: calc(100vh - 100px);
+            margin-top: 10vh;
+            height: 80vh;
             width: 100vw;
 
         }
