--- a/Delningsekonomi/Delningsekonomi/Content/sidemenu.css
+++ b/Delningsekonomi/Delningsekonomi/Content/sidemenu.css
@@ -1,12 +1,37 @@
 ﻿
+#menu {
+    background-color: darkslategray;
+    position: fixed;
+    width: 100%;
+    height: 10vh;
+    opacity: 1.0;
+    top: 0;
+    margin: 0;
+    padding: 0;
+    left: 0;
+    display: inline-block;
+    z-index: 1;
+}
+
+#hamburger {
+    font-size: 7vh;
+    cursor: pointer;
+    color: white;
+    height: 10vh;
+    width: 10vh;
+    float: left;
+    text-align: center;
+}
+
 #pac-input {
     background-color: #fff;
     font-family: Roboto;
-    font-size: 15px;
-    width: 78%;
+    font-size: 4vh;
+    width: calc(100% - 11vh);
     padding: 0;
-    margin-top: 2px;
-    height: 30px;
+    margin: 1vh 0;
+    height: 8vh;
+    border: none;
 }
 
 .sidenav {
@@ -22,24 +47,24 @@
     transition: 0.5s;
 }
 
-    .sidenav a {
-        padding: 8px 8px 8px 8px;
-        text-decoration: none;
-        font-size: 25px;
-        color: #818181;
-        display: block;
-        transition: 0.3s;
-    }
+.sidenav a {
+    padding: 8px 8px 8px 8px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
 
-        .sidenav a:hover {
-            color: #f1f1f1;
-        }
+.sidenav a:hover {
+    color: #f1f1f1;
+}
 
-    .sidenav .closebtn {
-        position: absolute;
-        top: 0;
-        font-size: 36px;
-    }
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    font-size: 36px;
+}
 
 @media screen and (min-width: 800px) {
     .sidenav {
@@ -107,20 +132,6 @@
     border-radius: 50%;
 }
 
-#menu {
-    background-color: black;
-    position: fixed;
-    width: 100%;
-    height: auto;
-    opacity: 0.7;
-    top: 0;
-    margin: 0;
-    padding: 0;
-    left: 0;
-    display: inline-block;
-    z-index: 1;
-}
-
 #left {
     float: left;
     width: 50px;
@@ -133,12 +144,4 @@
     background-color: mediumpurple;
 }
 
-#hamburger {
-    font-size: 30px;
-    cursor: pointer;
-    color: white;
-    width: 12%;
-    float: left;
-    text-align: center;
-}
 
