--- a/Delningsekonomi/Delningsekonomi/Views/Shared/ListLayout.cshtml
+++ b/Delningsekonomi/Delningsekonomi/Views/Shared/ListLayout.cshtml
@@ -17,17 +17,12 @@
             padding: 0;
             margin: 0;
             top: 0;
-            height: 100%;
         }
 
         body {
             display: block;
             margin: 0px;
-            height: 100%;
         }
-
-
-
 
         .body-content {
             padding: 0;
@@ -35,20 +30,20 @@
         }
 
         .list_content {
-            margin-top: 10%;
+            margin-top: 10vh;
             font-family: 'Roboto', sans-serif;
-            height: 90%;
+            height: 80vh;
         }
 
         .list {
-            padding: 20px;
+            padding: 3vh;
             clear: both;
             border-left: solid 2px;
             border-right: solid 2px;
             border-bottom: solid 1px;
             border-top: solid 1px;
             border-color: lightgray;
-            height: 20%;
+            height: 16vh;
         }
 
         .list_title {
