--- a/Delningsekonomi/Delningsekonomi/Views/Shared/Topmenu.cshtml
+++ b/Delningsekonomi/Delningsekonomi/Views/Shared/Topmenu.cshtml
@@ -1,7 +1,4 @@
-﻿
-
-
-<head>
+﻿<head>
     <link rel="stylesheet" type="text/css" href="~/Content/sidemenu.css" />
 </head>
 
@@ -29,4 +26,12 @@
     <span id="hamburger" onclick="openBurger()">&#9776;</span>
     <input id="pac-input" class="controls" type="text" placeholder="Search Box">
 </div>
+<script>
+    function openBurger() {
+        document.getElementById("mySidenav").style.display = "block";
+    }
 
+    function closeBurger() {
+        document.getElementById("mySidenav").style.display = "none";
+    }
+</script>
