--- a/Delningsekonomi/Delningsekonomi/Views/Shared/Topmenu.cshtml
+++ b/Delningsekonomi/Delningsekonomi/Views/Shared/Topmenu.cshtml
@@ -15,12 +15,12 @@
         <p id="email"> a.jakobsson@gmail.com</p>
     </div>
     <div id="loggaut">
-        <a href="#">Log Out</a>
+        <a href="#" class="textsidemenu">Log Out</a>
     </div>
-    <a href="#">Offers & Requests</a>
-    <a href="#">Settings</a>
-    <a href="#">Help</a>
-    <a href="#">Send Feedback</a>
+    <a href="#" class="textsidemenu">Offers & Requests</a>
+    <a href="#" class="textsidemenu">Settings</a>
+    <a href="#" class="textsidemenu">Help</a>
+    <a href="#" class="textsidemenu">Send Feedback</a>
 
 </div>
 
