--- a/Delningsekonomi/Delningsekonomi/Views/Home/ListView.cshtml
+++ b/Delningsekonomi/Delningsekonomi/Views/Home/ListView.cshtml
@@ -7,7 +7,7 @@
     Layout = "~/Views/Shared/listLayout.cshtml";
 }
 @Html.Partial("Topmenu")
-
+@Html.Partial("Bottommenulist")
 <script>
     var rad = function (x) {
         return x * Math.PI / 180;
