--- a/Delningsekonomi/Delningsekonomi/Views/Shared/Bottommenulist.cshtml
+++ b/Delningsekonomi/Delningsekonomi/Views/Shared/Bottommenulist.cshtml
@@ -106,8 +106,8 @@ $(document).ready(function () {
 
             <div onclick="MyFunction()" id="list_button" class="buttons">
                 <div>
-                    <a href="@Url.Action("ListView", "Home")">
-                    <img src="~/Images/listikon.png" alt="Tid" class="menubuttom" href="~/Home/ListView.cshtml">
+                    <a href="@Url.Action("Index", "Home")">
+                    <img src="~/Images/kartaikon.png" alt="Tid" class="menubuttom" href="~/Home/ListView.cshtml">
                     </a>
                  </div>
             </div>
