--- a/Delningsekonomi/Delningsekonomi/Views/Shared/MapLayout.cshtml
+++ b/Delningsekonomi/Delningsekonomi/Views/Shared/MapLayout.cshtml
@@ -23,14 +23,20 @@
             display: block;
             margin: 0px;
         }
-
-
        
         #map {
             margin-top: 10vh;
             height: 80vh;
             width: 100vw;
 
+        }
+
+        #tooltip h2 {
+            font-size: 4vh;
+        }
+
+        #tooltip p {
+            font-size: 2vh;
         }
 
         .body-content {
