--- a/Delningsekonomi/Delningsekonomi/Content/sidemenu.css
+++ b/Delningsekonomi/Delningsekonomi/Content/sidemenu.css
@@ -1,6 +1,6 @@
 ﻿
 #menu {
-    background-color: darkslategray;
+    background-color: dimgray;
     position: fixed;
     width: 100%;
     height: 10vh;
@@ -14,24 +14,30 @@
 }
 
 #hamburger {
-    font-size: 7vh;
+    font-size: 6vh;
     cursor: pointer;
-    color: white;
-    height: 10vh;
-    width: 10vh;
+    background-color: white;
+    color: dimgray;
+    margin: 1vh;
+    height: 8vh;
+    width: 8vh;
     float: left;
     text-align: center;
+    border-radius: 1vh;
+    font-weight: bolder;
 }
 
 #pac-input {
     background-color: #fff;
     font-family: Roboto;
     font-size: 4vh;
-    width: calc(100% - 11vh);
+    width: calc(100% - 11vh - 2vh);
     padding: 0;
+    padding-left: 2vh;
     margin: 1vh 0;
     height: 8vh;
     border: none;
+    border-radius: 1vh;
 }
 
 
@@ -49,7 +55,6 @@
 
 .sidenav a {
     padding: 1vh;
-    padding-left: 2vh;
     text-decoration: none;
     font-size: 3vh;
     color: dimgray;
