--- a/Delningsekonomi/Delningsekonomi/Views/Shared/ListLayout.cshtml
+++ b/Delningsekonomi/Delningsekonomi/Views/Shared/ListLayout.cshtml
@@ -82,6 +82,10 @@
             max-height: 12vh;
             max-width: 20vw;
         }
+
+        #list_spacer {
+            height: 10vh;
+        }
     </style>
 </head>
 <body>
