--- a/Delningsekonomi/Delningsekonomi/Views/Shared/ListLayout.cshtml
+++ b/Delningsekonomi/Delningsekonomi/Views/Shared/ListLayout.cshtml
@@ -17,6 +17,7 @@
             padding: 0;
             margin: 0;
             top: 0;
+            overflow: hidden;
         }
 
         body {
@@ -33,6 +34,7 @@
             margin-top: 10vh;
             font-family: 'Roboto', sans-serif;
             height: 80vh;
+            overflow-y: scroll;
         }
 
         .list {
@@ -72,7 +74,7 @@
             display: inline-block;
             width: 75%;
             max-height: 75%;
-            overflow: auto;
+            overflow: hidden;
             font-size: calc(1vw + 1vh + 1vmin);
         }
 
@@ -81,10 +83,6 @@
             display: inline-block;
             max-height: 12vh;
             max-width: 20vw;
-        }
-
-        #list_spacer {
-            height: 10vh;
         }
     </style>
 </head>
