--- a/Delningsekonomi/Delningsekonomi/Content/sidemenu.css
+++ b/Delningsekonomi/Delningsekonomi/Content/sidemenu.css
@@ -12,7 +12,25 @@
     display: inline-block;
     z-index: 1;
 }
+.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+}
 
+.panel {
+    padding: 0 18px;
+    display: none;
+    background-color: white;
+    overflow: hidden;
+}
 #hamburger {
     font-size: 6vh;
     cursor: pointer;
